CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_tools STATIC
	cuv_general.cu
	memory_tools.cpp
  )
TARGET_LINK_LIBRARIES(cuv_tools ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_tools 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)

