CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
ADD_LIBRARY(cuv_basics_io SHARED io.cpp)
CUDA_ADD_LIBRARY(cuv_basics SHARED
	accessors.cu
	cuda_array.cu
  )
TARGET_LINK_LIBRARIES(cuv_basics_io ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${Boost_SERIALIZATION_LIBRARY})
TARGET_LINK_LIBRARIES(cuv_basics cuv_basics_io ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${Boost_SERIALIZATION_LIBRARY})
install(TARGETS cuv_basics
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)

install(TARGETS cuv_basics_io
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
