FIND_PACKAGE( BLAS REQUIRED)

INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
#INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/3rd_party/CudaConv )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/3rd_party/cudaconv2/include )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/basics )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/tensor_ops )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/convert )

CUDA_INCLUDE_DIRECTORIES( ${CBLAS_INCLUDE_DIRECTORY} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/3rd_party/cudaconv2/include )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/basics )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/tensor_ops )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/convert )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/tools )

CUDA_ADD_LIBRARY(cuv_convolution_ops SHARED
	convolution_ops.cu
  )

TARGET_LINK_LIBRARIES(cuv_convolution_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY} ${BLAS_LIBRARIES} tp_cudaconv2)

install(TARGETS cuv_convolution_ops
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
