add_subdirectory(hog)
add_subdirectory(rbm)
add_subdirectory(kmeans)
add_subdirectory(nlmeans)
add_subdirectory(kernels)
add_subdirectory(integral_image)
add_subdirectory(separable_conv)
add_subdirectory(opt)
add_subdirectory(caffe)
IF(CUV_CIMG_BINDINGS)
	add_subdirectory(cimg)
ENDIF(CUV_CIMG_BINDINGS)
