CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/basics )

FILE(GLOB TENSOR_OPS_INST "${CMAKE_CURRENT_SOURCE_DIR}/instantiations/*.cu")
CUDA_ADD_LIBRARY(cuv_tensor_ops STATIC
	${TENSOR_OPS_INST}
	rprop.cu
  )
TARGET_LINK_LIBRARIES(cuv_tensor_ops ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_tensor_ops
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
