INCLUDE_DIRECTORIES( ${CUDA_SDK_INCLUDE_DIR}/common/inc )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_kernels STATIC
	kernels.cu
  )
TARGET_LINK_LIBRARIES(cuv_kernels ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_kernels 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)

