INCLUDE_DIRECTORIES( ${CUDA_SDK_INCLUDE_DIR}/common/inc )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_cimg SHARED
	cuv_cimg.cu
  )
TARGET_LINK_LIBRARIES(cuv_cimg ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_cimg 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
