CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_hog SHARED
        hog.cu
  )
TARGET_LINK_LIBRARIES(cuv_hog ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_hog
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/static)
