INCLUDE_DIRECTORIES( ${CUDA_SDK_INCLUDE_DIR}/common/inc )
CUDA_INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )
CUDA_ADD_LIBRARY(cuv_kmeans SHARED
	kmeans.cu
  )
TARGET_LINK_LIBRARIES(cuv_kmeans ${CUDA_LIBRARIES} ${CUDA_CUT_LIBRARY})

install(TARGETS cuv_kmeans 
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
